--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -79,6 +79,13 @@ footer
           width: 224px
           height: 32px
 
+      &.sloan_foundation
+        float: left
+        margin-left: 3em
+
+        img
+          height: 32px
+
       &.extra
         float: right
         font-size: 18px
