--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -206,111 +206,139 @@
     .contents
       margin-bottom: 5em
 
-    .splitbars .splitbars-container div.third span
-      left: -15px
-
-    .splitbars .splitbars-container div.fourth span
-      left: -20px
+    .first span
+      left: -40px
+      &.your_answer span
+        left: -90px
+    .second span
+      left: -40px
+      &.your_answer span
+        left: -90px
+    .third span
+      left: -17px
+      &.your_answer span
+        left: -67px
+    .fourth span
+      left: -35px
+      &.your_answer span
+        left: -85px
+        
+    &.age-25-34,
+    &.age-35-44,
+    &.age-45-54,
+    &.age-55plus
+      .age_group.age-all
+        display: none
 
     &.age-all
       .age_group.age-all
         display: inline
-      .twothousandthree-pre65
-        width: 37%
-      .twothousandthree-65older
-        width: 49%
-      .twothousandthree-never
-        width: 6%
-      .twothousandthree-dunno
-        width: 8%
-      .twothousandthirteen-pre65
-        width: 23%
-      .twothousandthirteen-65older
-        width: 61%
-      .twothousandthirteen-never
-        width: 8%
-      .twothousandthirteen-dunno
-        width: 8%
+      .twothousandthree-chart
+        .pre65
+          width: 37%
+        .gte65
+          width: 49%
+        .never
+          width: 6%
+        .dunno
+          width: 8%
+      .twothousandthirteen-chart
+        .pre65
+          width: 23%
+        .gte65
+          width: 61%
+        .never
+          width: 8%
+        .dunno
+          width: 8%
 
     &.age-25-34
       .age_group.age-25-34
         display: inline
-      .twothousandthree-pre65
-        width: 37%
-      .twothousandthree-65older
-        width: 55%
-      .twothousandthree-never
-        width: 4%
-      .twothousandthree-dunno
-        width: 4%
-      .twothousandthirteen-pre65
-        width: 29%
-      .twothousandthirteen-65older
-        width: 60%
-      .twothousandthirteen-never
-        width: 3%
-      .twothousandthirteen-dunno
-        width: 8%
+      .twothousandthree-chart
+        .pre65
+          width: 37%
+        .gte65
+          width: 55%
+        .never
+          width: 4%
+        .dunno
+          width: 4%
+      .twothousandthirteen-chart
+        .pre65
+          width: 29%
+        .gte65
+          width: 60%
+        .never
+          width: 3%
+        .dunno
+          width: 8%
 
     &.age-35-44
       .age_group.age-35-44
         display: inline
-      .twothousandthree-pre65
-        width: 41%
-      .twothousandthree-65older
-        width: 46%
-      .twothousandthree-never
-        width: 5%
-      .twothousandthree-dunno
-        width: 8%
-      .twothousandthirteen-pre65
-        width: 21%
-      .twothousandthirteen-65older
-        width: 62%
-      .twothousandthirteen-never
-        width: 9%
-      .twothousandthirteen-dunno
-        width: 8%
+      .twothousandthree-chart
+        .pre65
+          width: 41%
+        .gte65
+          width: 46%
+        .never
+          width: 5%
+        .dunno
+          width: 8%
+      .twothousandthirteen-chart
+        .pre65
+          width: 21%
+        .gte65
+          width: 62%
+        .never
+          width: 9%
+        .dunno
+          width: 8%
 
     &.age-45-54
       .age_group.age-45-54
         display: inline
-      .twothousandthree-pre65
-        width: 37%
-      .twothousandthree-65older
-        width: 45%
-      .twothousandthree-never
-        width: 8%
-      .twothousandthree-dunno
-        width: 10%
-      .twothousandthirteen-pre65
-        width: 24%
-      .twothousandthirteen-65older
-        width: 61%
-      .twothousandthirteen-never
-        width: 7%
-      .twothousandthirteen-dunno
-        width: 8%
+      .twothousandthree-chart
+        .pre65
+          width: 37%
+        .gte65
+          width: 45%
+        .never
+          width: 8%
+        .dunno
+          width: 10%
+      .twothousandthirteen-chart
+        .pre65
+          width: 24%
+        .gte65
+          width: 61%
+        .never
+          width: 7%
+        .dunno
+          width: 8%
 
     &.age-55plus
       .age_group.age-55plus
         display: inline
-      .twothousandthree-pre65
-        width: 25%
-      .twothousandthree-65older
-        width: 49%
-      .twothousandthree-never
-        width: 8%
-      .twothousandthree-dunno
-        width: 18%
-      .twothousandthirteen-pre65
-        width: 18%
-      .twothousandthirteen-65older
-        width: 61%
-      .twothousandthirteen-never
-        width: 11%
-      .twothousandthirteen-dunno
-        width: 10%
+      .twothousandthree-chart
+        .pre65
+          width: 25%
+        .gte65
+          width: 49%
+        .never
+          width: 8%
+        .dunno
+          width: 18%
+      .twothousandthirteen-chart
+        .pre65
+          width: 18%
+        .gte65
+          width: 61%
+        .never
+          width: 11%
+        .dunno
+          width: 10%
 
   .half_of_american_households
     @extend .spread
