--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -182,6 +182,7 @@ section
       background: $green
       color: #fff
       display: block
+      font-family: $proxima-bold
       padding: 2em
       width: 50%
 
@@ -193,18 +194,18 @@ section
 
     cite
       display: block
-      font-size: $font-size * 0.95
+      font-family: $proxima-semibold
+      font-size: $font-size * 0.9
       line-height: 1.3
       margin-left: 1.5em
 
       strong
         display: block
-        font-family: $caslon-bold
+        font-family: $proxima-semibold
         font-size: 18px
         font-weight: normal
         line-height: 1.5
-        text-indent: -1.2em
-        text-transform: uppercase
+        text-indent: -1.1em
 
         small
           font-size: 14px
@@ -287,8 +288,8 @@ section
           line-height: 1.4
           margin: .75em 0
 
-    video, .replay
-      // background: #000
+    video,
+    .replay
       width: 500px
       height: 280px
       display: block
