--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -80,11 +80,23 @@ footer
           height: 32px
 
       &.sloan_foundation
-        float: left
-        margin-left: 3em
+        clear: both
+        opacity: .5
+        padding-top: 2em
+        text-align: center
+        
+        a
+          text-decoration: none
 
         img
           height: 32px
+          margin-right: 1em
+          vertical-align: -6px
+
+        span
+          color: #333
+          font-family: $proxima-bold
+          font-size: 11px
 
       &.extra
         float: right
