--- a/css/style.css
+++ b/css/style.css
@@ -1004,33 +1004,45 @@ footer {
           height: 32px; }
       /* line 82, sass/_footer.sass */
       footer .links p.sloan_foundation {
-        float: left;
-        margin-left: 3em; }
-        /* line 86, sass/_footer.sass */
+        clear: both;
+        opacity: 0.5;
+        padding-top: 2em;
+        text-align: center; }
+        /* line 88, sass/_footer.sass */
+        footer .links p.sloan_foundation a {
+          text-decoration: none; }
+        /* line 91, sass/_footer.sass */
         footer .links p.sloan_foundation img {
-          height: 32px; }
-      /* line 89, sass/_footer.sass */
+          height: 32px;
+          margin-right: 1em;
+          vertical-align: -6px; }
+        /* line 96, sass/_footer.sass */
+        footer .links p.sloan_foundation span {
+          color: #333333;
+          font-family: "Proxima N W01 Bold";
+          font-size: 11px; }
+      /* line 101, sass/_footer.sass */
       footer .links p.extra {
         float: right;
         font-size: 18px;
         margin-top: 0.5em; }
-        /* line 94, sass/_footer.sass */
+        /* line 106, sass/_footer.sass */
         footer .links p.extra a {
           color: #dddddd;
           border-bottom: 2px solid #dddddd; }
-          /* line 98, sass/_footer.sass */
+          /* line 110, sass/_footer.sass */
           footer .links p.extra a:hover {
             color: white;
             border-bottom: 2px solid white; }
 
-/* line 102, sass/_footer.sass */
+/* line 114, sass/_footer.sass */
 #sources-open,
 #credits-open {
   cursor: pointer;
   margin-left: 1em;
   text-transform: uppercase; }
 
-/* line 108, sass/_footer.sass */
+/* line 120, sass/_footer.sass */
 #credits-close,
 #sources-close {
   color: #aaaaaa;
@@ -1043,12 +1055,12 @@ footer {
   top: 0;
   right: 0;
   z-index: 10; }
-  /* line 121, sass/_footer.sass */
+  /* line 133, sass/_footer.sass */
   #credits-close:hover,
   #sources-close:hover {
     color: #383838; }
 
-/* line 124, sass/_footer.sass */
+/* line 136, sass/_footer.sass */
 #credits,
 #sources {
   display: none;
@@ -1060,7 +1072,7 @@ footer {
   height: 100%;
   z-index: 98; }
 
-/* line 135, sass/_footer.sass */
+/* line 147, sass/_footer.sass */
 .credits-content,
 .sources-content {
   background: white;
@@ -1077,7 +1089,7 @@ footer {
   -webkit-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 35px rgba(0, 0, 0, 0.75); }
-  /* line 150, sass/_footer.sass */
+  /* line 162, sass/_footer.sass */
   .credits-content h2,
   .sources-content h2 {
     font-family: "BodoniW01-PosterItalic";
@@ -1085,59 +1097,59 @@ footer {
     margin: 0;
     padding: 0;
     text-align: left; }
-  /* line 157, sass/_footer.sass */
+  /* line 169, sass/_footer.sass */
   .credits-content h3,
   .sources-content h3 {
     font-family: "Proxima N W01 Bold";
     font-size: 18px;
     text-transform: uppercase; }
 
-/* line 164, sass/_footer.sass */
+/* line 176, sass/_footer.sass */
 .credits-content h3 span {
   color: #aaaaaa;
   font-size: 85%;
   margin-left: 0.5em;
   text-transform: none; }
-/* line 171, sass/_footer.sass */
+/* line 183, sass/_footer.sass */
 .credits-content ul li {
   color: #aaaaaa;
   font-family: "Proxima N W01 Smbd";
   font-size: 14px; }
-  /* line 176, sass/_footer.sass */
+  /* line 188, sass/_footer.sass */
   .credits-content ul li strong {
     color: #383838;
     font-family: "Proxima N W01 Bold";
     font-size: 16px;
     font-weight: normal;
     margin-right: 0.5em; }
-/* line 183, sass/_footer.sass */
+/* line 195, sass/_footer.sass */
 .credits-content a {
   text-decoration: none; }
-/* line 186, sass/_footer.sass */
+/* line 198, sass/_footer.sass */
 .credits-content .photo_credits {
   opacity: 0.5; }
-  /* line 189, sass/_footer.sass */
+  /* line 201, sass/_footer.sass */
   .credits-content .photo_credits h3 {
     font-size: 16px;
     margin-bottom: 0.5em;
     text-transform: none; }
-  /* line 194, sass/_footer.sass */
+  /* line 206, sass/_footer.sass */
   .credits-content .photo_credits ul li {
     font-size: 13px; }
-    /* line 197, sass/_footer.sass */
+    /* line 209, sass/_footer.sass */
     .credits-content .photo_credits ul li strong {
       font-family: "Proxima N W01 Smbd";
       font-size: 13px; }
 
-/* line 202, sass/_footer.sass */
+/* line 214, sass/_footer.sass */
 .sources-content ul {
   margin-left: 1.25em; }
-  /* line 205, sass/_footer.sass */
+  /* line 217, sass/_footer.sass */
   .sources-content ul li {
     font-family: "Proxima N W01 Smbd";
     font-size: 14px;
     list-style: square; }
-    /* line 210, sass/_footer.sass */
+    /* line 222, sass/_footer.sass */
     .sources-content ul li strong {
       font-family: "Proxima N W01 Bold";
       font-size: 16px;
