--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ section {
       line-height: 1.4;
       margin: 0.75em 0; }
   /* line 291, sass/_base.sass */
-  section.video video,
+  section.video .video-container,
   section.video .replay {
     width: 500px;
     height: 280px;
@@ -407,7 +407,7 @@ section {
   section.video.playing .replay {
     display: none; }
   /* line 307, sass/_base.sass */
-  section.video.right video, .chapter-2-a-snapshot article .gender_split section.video.quotation.female video, .chapter-2-a-snapshot article section.video.joel_peters video, .chapter-2-a-snapshot article section.video.quotation.dante_chinni video, .chapter-3-working-for-the-nest-egg article section.video.if_you_look_at video, .chapter-3-working-for-the-nest-egg article section.video.a_third_of_baby_boomers video, .chapter-3-working-for-the-nest-egg article section.video.the_great_recession video, .chapter-3-working-for-the-nest-egg article section.video.brutal_job_search video, .chapter-3-working-for-the-nest-egg article section.video.julie_zissimopoulos video, .chapter-4-working-in-retirement article section.video.nancy_goldberg video, .chapter-4-working-in-retirement article section.video.marc_freedman video, .chapter-4-working-in-retirement article section.video.vita_needle video {
+  section.video.right .video-container, .chapter-2-a-snapshot article .gender_split section.video.quotation.female .video-container, .chapter-2-a-snapshot article section.video.joel_peters .video-container, .chapter-2-a-snapshot article section.video.quotation.dante_chinni .video-container, .chapter-3-working-for-the-nest-egg article section.video.if_you_look_at .video-container, .chapter-3-working-for-the-nest-egg article section.video.a_third_of_baby_boomers .video-container, .chapter-3-working-for-the-nest-egg article section.video.the_great_recession .video-container, .chapter-3-working-for-the-nest-egg article section.video.brutal_job_search .video-container, .chapter-3-working-for-the-nest-egg article section.video.julie_zissimopoulos .video-container, .chapter-4-working-in-retirement article section.video.nancy_goldberg .video-container, .chapter-4-working-in-retirement article section.video.marc_freedman .video-container, .chapter-4-working-in-retirement article section.video.vita_needle .video-container {
     float: right;
     margin-left: 2em; }
   /* line 310, sass/_base.sass */
@@ -415,7 +415,7 @@ section {
     right: 0;
     background-image: url('../img/play-small.png?1369940870'); }
   /* line 315, sass/_base.sass */
-  section.video.left video, .chapter-1-rethinking-retirement article section.video.working_about_the_right_amount video, .chapter-2-a-snapshot article .gender_split section.video.quotation.male video, .chapter-3-working-for-the-nest-egg article section.video.sheryl_garrett video, .chapter-3-working-for-the-nest-egg article section.video.babs_tatalias video, .chapter-3-working-for-the-nest-egg article section.video.charles_smith video, .chapter-3-working-for-the-nest-egg article section.video.mike_kemp video, .chapter-4-working-in-retirement article section.video.colleges_see_graying_workforce video, .chapter-4-working-in-retirement article section.video.boom_in_entrepreneurship video {
+  section.video.left .video-container, .chapter-1-rethinking-retirement article section.video.working_about_the_right_amount .video-container, .chapter-2-a-snapshot article .gender_split section.video.quotation.male .video-container, .chapter-3-working-for-the-nest-egg article section.video.sheryl_garrett .video-container, .chapter-3-working-for-the-nest-egg article section.video.babs_tatalias .video-container, .chapter-3-working-for-the-nest-egg article section.video.charles_smith .video-container, .chapter-3-working-for-the-nest-egg article section.video.mike_kemp .video-container, .chapter-4-working-in-retirement article section.video.colleges_see_graying_workforce .video-container, .chapter-4-working-in-retirement article section.video.boom_in_entrepreneurship .video-container {
     float: left;
     margin-right: 2em; }
   /* line 318, sass/_base.sass */
@@ -423,7 +423,7 @@ section {
     left: 0;
     background-image: url('../img/play-small.png?1369940870'); }
   /* line 323, sass/_base.sass */
-  section.video.full video, .chapter-2-a-snapshot article section.video.dante_chinni video, .chapter-3-working-for-the-nest-egg article section.paul_transition video, .chapter-4-working-in-retirement article section.video.paul_interviews_paul video, section.video.full .replay, .chapter-2-a-snapshot article section.video.dante_chinni .replay, .chapter-3-working-for-the-nest-egg article section.paul_transition .replay, .chapter-4-working-in-retirement article section.video.paul_interviews_paul .replay {
+  section.video.full .video-container, .chapter-2-a-snapshot article section.video.dante_chinni .video-container, .chapter-3-working-for-the-nest-egg article section.paul_transition .video-container, .chapter-4-working-in-retirement article section.video.paul_interviews_paul .video-container, section.video.full .replay, .chapter-2-a-snapshot article section.video.dante_chinni .replay, .chapter-3-working-for-the-nest-egg article section.paul_transition .replay, .chapter-4-working-in-retirement article section.video.paul_interviews_paul .replay {
     width: 800px;
     height: 450px;
     margin-bottom: 1.5em; }
