--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -208,20 +208,20 @@
 
     .first span
       left: -40px
-      &.your_answer span
-        left: -90px
+    .first.your_answer span
+      left: -90px
     .second span
       left: -40px
-      &.your_answer span
-        left: -90px
+    .second.your_answer span
+      left: -90px
     .third span
       left: -17px
-      &.your_answer span
-        left: -67px
+    .third.your_answer span
+      left: -67px
     .fourth span
       left: -35px
-      &.your_answer span
-        left: -85px
+    .fourth.your_answer span
+      left: -85px
         
     &.age-25-34,
     &.age-35-44,
