--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -197,20 +197,20 @@
 
     .first span
       left: -30px
-      &.your_answer span
-        left: -80px
+    .first.your_answer span
+      left: -80px
     .second span
       left: -30px
-      &.your_answer span
-        left: -80px
+    .second.your_answer span
+      left: -80px
     .third span
       left: -25px
-      &.your_answer span
-        left: -75px
+    .third.your_answer span
+      left: -75px
     .fourth span
       left: -30px
-      &.your_answer span
-        left: -80px
+    .fourth.your_answer span
+      left: -80px
 
     .nineteenninetyfive-chart
       .very
