--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -121,9 +121,9 @@
     @extend .border-bottom
     height: 600px
 
-    .background_image
-      @include multi-background("3/pension")
-      background-position: 50.8% top
+    @include multi-background("3/pension")
+    background-position: 50.8% top
+    background-attachment: fixed
 
     .contents
       @include clearfix
