Fixing background image positions.

--- a/css/sass/_chapter4.sass
+++ b/css/sass/_chapter4.sass
@@ -3,6 +3,7 @@
   .chapter_title
     .background_image
       @include multi-background("4/barber")
+      background-attachment: fixed
       background-position: center -200px
 
     .contents
