--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -3,7 +3,8 @@
   .chapter_title
     .background_image
       @include multi-background("2/fishing")
-      background-position: center -50%
+      background-attachment: fixed
+      background-position: center
 
     .contents
       max-width: 900px
