--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -5,6 +5,7 @@
 
     .background_image
       @include multi-background("3/house")
+      background-attachment: fixed
       background-position: center -200px
 
     .contents
