--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -5,7 +5,9 @@
 
     .background_image
       @include multi-background("5/man_standing")
-      background-position: center -200px
+      background-attachment: fixed
+      @media (min-width: 1024px)
+        background-position: center 25%
 
     .contents
       max-width: 900px
