--- a/css/style.css
+++ b/css/style.css
@@ -1001,46 +1001,27 @@ footer {
           width: 224px;
           height: 32px; }
       /* line 82, sass/_footer.sass */
-      footer .links p.sloan_foundation {
-        clear: both;
-        opacity: 0.5;
-        padding-top: 2em;
-        text-align: center; }
-        /* line 88, sass/_footer.sass */
-        footer .links p.sloan_foundation a {
-          text-decoration: none; }
-        /* line 91, sass/_footer.sass */
-        footer .links p.sloan_foundation img {
-          height: 32px;
-          margin-right: 1em;
-          vertical-align: -6px; }
-        /* line 96, sass/_footer.sass */
-        footer .links p.sloan_foundation span {
-          color: #333333;
-          font-family: "Proxima N W01 Bold";
-          font-size: 11px; }
-      /* line 101, sass/_footer.sass */
       footer .links p.extra {
         float: right;
         font-size: 18px;
         margin-top: 0.5em; }
-        /* line 106, sass/_footer.sass */
+        /* line 87, sass/_footer.sass */
         footer .links p.extra a {
           color: #dddddd;
           border-bottom: 2px solid #dddddd; }
-          /* line 110, sass/_footer.sass */
+          /* line 91, sass/_footer.sass */
           footer .links p.extra a:hover {
             color: white;
             border-bottom: 2px solid white; }
 
-/* line 114, sass/_footer.sass */
+/* line 95, sass/_footer.sass */
 #sources-open,
 #credits-open {
   cursor: pointer;
   margin-left: 1em;
   text-transform: uppercase; }
 
-/* line 120, sass/_footer.sass */
+/* line 101, sass/_footer.sass */
 #credits-close,
 #sources-close {
   color: #aaaaaa;
@@ -1053,12 +1034,12 @@ footer {
   top: 0;
   right: 0;
   z-index: 10; }
-  /* line 133, sass/_footer.sass */
+  /* line 114, sass/_footer.sass */
   #credits-close:hover,
   #sources-close:hover {
     color: #383838; }
 
-/* line 136, sass/_footer.sass */
+/* line 117, sass/_footer.sass */
 #credits,
 #sources {
   display: none;
@@ -1070,7 +1051,7 @@ footer {
   height: 100%;
   z-index: 98; }
 
-/* line 147, sass/_footer.sass */
+/* line 128, sass/_footer.sass */
 .credits-content,
 .sources-content {
   background: white;
@@ -1087,7 +1068,7 @@ footer {
   -webkit-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 35px rgba(0, 0, 0, 0.75); }
-  /* line 162, sass/_footer.sass */
+  /* line 143, sass/_footer.sass */
   .credits-content h2,
   .sources-content h2 {
     font-family: "BodoniW01-PosterItalic";
@@ -1095,59 +1076,75 @@ footer {
     margin: 0;
     padding: 0;
     text-align: left; }
-  /* line 169, sass/_footer.sass */
+  /* line 150, sass/_footer.sass */
   .credits-content h3,
   .sources-content h3 {
     font-family: "Proxima N W01 Bold";
     font-size: 18px;
     text-transform: uppercase; }
 
-/* line 176, sass/_footer.sass */
+/* line 157, sass/_footer.sass */
 .credits-content h3 span {
   color: #aaaaaa;
   font-size: 85%;
   margin-left: 0.5em;
   text-transform: none; }
-/* line 183, sass/_footer.sass */
+/* line 164, sass/_footer.sass */
 .credits-content ul li {
   color: #aaaaaa;
   font-family: "Proxima N W01 Smbd";
   font-size: 14px; }
-  /* line 188, sass/_footer.sass */
+  /* line 169, sass/_footer.sass */
+  .credits-content ul li.not_person {
+    color: #383838; }
+  /* line 172, sass/_footer.sass */
   .credits-content ul li strong {
     color: #383838;
     font-family: "Proxima N W01 Bold";
     font-size: 16px;
     font-weight: normal;
     margin-right: 0.5em; }
-/* line 195, sass/_footer.sass */
+/* line 179, sass/_footer.sass */
 .credits-content a {
   text-decoration: none; }
-/* line 198, sass/_footer.sass */
+/* line 182, sass/_footer.sass */
+.credits-content .sloan_foundation {
+  padding: 24px;
+  text-align: center; }
+  /* line 186, sass/_footer.sass */
+  .credits-content .sloan_foundation img {
+    display: block;
+    margin: 0 auto 0.5em auto;
+    width: 250px; }
+  /* line 191, sass/_footer.sass */
+  .credits-content .sloan_foundation span {
+    font-family: "Proxima N W01 Smbd";
+    font-size: 13px; }
+/* line 195, sass/_footer.sass */
 .credits-content .photo_credits {
   opacity: 0.5; }
-  /* line 201, sass/_footer.sass */
+  /* line 198, sass/_footer.sass */
   .credits-content .photo_credits h3 {
     font-size: 16px;
     margin-bottom: 0.5em;
     text-transform: none; }
-  /* line 206, sass/_footer.sass */
+  /* line 203, sass/_footer.sass */
   .credits-content .photo_credits ul li {
     font-size: 13px; }
-    /* line 209, sass/_footer.sass */
+    /* line 206, sass/_footer.sass */
     .credits-content .photo_credits ul li strong {
       font-family: "Proxima N W01 Smbd";
       font-size: 13px; }
 
-/* line 214, sass/_footer.sass */
+/* line 211, sass/_footer.sass */
 .sources-content ul {
   margin-left: 1.25em; }
-  /* line 217, sass/_footer.sass */
+  /* line 214, sass/_footer.sass */
   .sources-content ul li {
     font-family: "Proxima N W01 Smbd";
     font-size: 14px;
     list-style: square; }
-    /* line 222, sass/_footer.sass */
+    /* line 219, sass/_footer.sass */
     .sources-content ul li strong {
       font-family: "Proxima N W01 Bold";
       font-size: 16px;
