--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -223,6 +223,19 @@
           .icon:after
             opacity: 1
 
+  .community_size-intro
+    @extend .blend-bottom
+
+    p
+      text-align: center
+
+      &.first
+        line-height: 1.4
+        font-size: 24px
+
+      &.second
+        font-size: 14px
+
   .community_data
     @extend .blend-top
 
@@ -233,6 +246,10 @@
       line-height: 1.4
       margin: 0
       padding: 1em .75em .9em
+
+      span
+        display: block
+        font-size: 16px
 
     p
       font-size: 18px
