--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ em {
   padding-top: 0; }
 
 /* line 75, sass/_base.sass */
-.blend-bottom .contents, .chapter-1-rethinking-retirement article .age_and_retirement .contents, .chapter-1-rethinking-retirement article .labor_force .contents, .chapter-1-rethinking-retirement article .quotation.paul .contents, .chapter-2-a-snapshot article .question.community_size .contents, .chapter-3-working-for-the-nest-egg article .death_of_the_pension-intro .contents, .chapter-3-working-for-the-nest-egg article .confidence .contents, .chapter-3-working-for-the-nest-egg article .calculator .contents, .chapter-3-working-for-the-nest-egg article .unemployed_but_wanting_to_work .contents, .chapter-4-working-in-retirement article .working_longer .contents, .chapter-4-working-in-retirement article .marc_freedman .contents {
+.blend-bottom .contents, .chapter-1-rethinking-retirement article .age_and_retirement .contents, .chapter-1-rethinking-retirement article .labor_force .contents, .chapter-1-rethinking-retirement article .quotation.paul .contents, .chapter-2-a-snapshot article .question.community_size .contents, .chapter-2-a-snapshot article .community_size-intro .contents, .chapter-3-working-for-the-nest-egg article .death_of_the_pension-intro .contents, .chapter-3-working-for-the-nest-egg article .confidence .contents, .chapter-3-working-for-the-nest-egg article .calculator .contents, .chapter-3-working-for-the-nest-egg article .unemployed_but_wanting_to_work .contents, .chapter-4-working-in-retirement article .working_longer .contents, .chapter-4-working-in-retirement article .marc_freedman .contents {
   padding-bottom: 0; }
 
 /* line 78, sass/_base.sass */
@@ -2088,6 +2088,16 @@ footer {
     .chapter-2-a-snapshot article .question.community_size .form_fields label:hover .icon:after {
       opacity: 1; }
 /* line 229, sass/_chapter2.sass */
+.chapter-2-a-snapshot article .community_size-intro p {
+  text-align: center; }
+  /* line 232, sass/_chapter2.sass */
+  .chapter-2-a-snapshot article .community_size-intro p.first {
+    line-height: 1.4;
+    font-size: 24px; }
+  /* line 236, sass/_chapter2.sass */
+  .chapter-2-a-snapshot article .community_size-intro p.second {
+    font-size: 14px; }
+/* line 242, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .community_data h2 {
   background: #666666;
   color: white;
@@ -2095,35 +2105,39 @@ footer {
   line-height: 1.4;
   margin: 0;
   padding: 1em 0.75em 0.9em; }
-/* line 237, sass/_chapter2.sass */
+  /* line 250, sass/_chapter2.sass */
+  .chapter-2-a-snapshot article .community_data h2 span {
+    display: block;
+    font-size: 16px; }
+/* line 254, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .community_data p {
   font-size: 18px;
   line-height: 1.4;
   text-align: center;
   text-transform: none; }
-/* line 243, sass/_chapter2.sass */
+/* line 260, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .community_data .community_changes {
   background: url("../img/form-background.jpg");
   height: 200px; }
-  /* line 247, sass/_chapter2.sass */
+  /* line 264, sass/_chapter2.sass */
   .chapter-2-a-snapshot article .community_data .community_changes .positive,
   .chapter-2-a-snapshot article .community_data .community_changes .negative {
     overflow: hidden;
     *zoom: 1;
     height: 100px; }
-    /* line 252, sass/_chapter2.sass */
+    /* line 269, sass/_chapter2.sass */
     .chapter-2-a-snapshot article .community_data .community_changes .positive div,
     .chapter-2-a-snapshot article .community_data .community_changes .negative div {
       position: absolute;
       width: 200px; }
-      /* line 256, sass/_chapter2.sass */
+      /* line 273, sass/_chapter2.sass */
       .chapter-2-a-snapshot article .community_data .community_changes .positive div span,
       .chapter-2-a-snapshot article .community_data .community_changes .negative div span {
         display: block;
         margin: 0 auto;
         width: 50%;
         height: 100%; }
-        /* line 262, sass/_chapter2.sass */
+        /* line 279, sass/_chapter2.sass */
         .chapter-2-a-snapshot article .community_data .community_changes .positive div span strong,
         .chapter-2-a-snapshot article .community_data .community_changes .negative div span strong {
           color: white;
@@ -2136,62 +2150,62 @@ footer {
           position: absolute;
           top: 0.2em;
           left: 35%; }
-      /* line 274, sass/_chapter2.sass */
+      /* line 291, sass/_chapter2.sass */
       .chapter-2-a-snapshot article .community_data .community_changes .positive div.a,
       .chapter-2-a-snapshot article .community_data .community_changes .negative div.a {
         left: 0;
         top: 0;
         height: 30%; }
-      /* line 279, sass/_chapter2.sass */
+      /* line 296, sass/_chapter2.sass */
       .chapter-2-a-snapshot article .community_data .community_changes .positive div.b,
       .chapter-2-a-snapshot article .community_data .community_changes .negative div.b {
         left: 25%;
         bottom: 0;
         height: 20%; }
-        /* line 284, sass/_chapter2.sass */
+        /* line 301, sass/_chapter2.sass */
         .chapter-2-a-snapshot article .community_data .community_changes .positive div.b span,
         .chapter-2-a-snapshot article .community_data .community_changes .negative div.b span {
           background: transparent; }
-        /* line 287, sass/_chapter2.sass */
+        /* line 304, sass/_chapter2.sass */
         .chapter-2-a-snapshot article .community_data .community_changes .positive div.b strong,
         .chapter-2-a-snapshot article .community_data .community_changes .negative div.b strong {
           color: #aaaaaa;
           font-family: "Proxima N W01 Smbd";
           font-size: 14px;
           position: static; }
-      /* line 293, sass/_chapter2.sass */
+      /* line 310, sass/_chapter2.sass */
       .chapter-2-a-snapshot article .community_data .community_changes .positive div.c,
       .chapter-2-a-snapshot article .community_data .community_changes .negative div.c {
         left: 50%;
         bottom: 0;
         height: 70%; }
-        /* line 298, sass/_chapter2.sass */
+        /* line 315, sass/_chapter2.sass */
         .chapter-2-a-snapshot article .community_data .community_changes .positive div.c span strong,
         .chapter-2-a-snapshot article .community_data .community_changes .negative div.c span strong {
           font-size: 28px;
           padding-top: 0.3em; }
-      /* line 302, sass/_chapter2.sass */
+      /* line 319, sass/_chapter2.sass */
       .chapter-2-a-snapshot article .community_data .community_changes .positive div.d,
       .chapter-2-a-snapshot article .community_data .community_changes .negative div.d {
         left: 75%;
         top: 0;
         height: 30%; }
-  /* line 307, sass/_chapter2.sass */
+  /* line 324, sass/_chapter2.sass */
   .chapter-2-a-snapshot article .community_data .community_changes .positive {
     border-bottom: 2px solid #666666; }
-    /* line 310, sass/_chapter2.sass */
+    /* line 327, sass/_chapter2.sass */
     .chapter-2-a-snapshot article .community_data .community_changes .positive div span {
       background: #548e85; }
-  /* line 314, sass/_chapter2.sass */
+  /* line 331, sass/_chapter2.sass */
   .chapter-2-a-snapshot article .community_data .community_changes .negative div span {
     background: #aaaaaa; }
-/* line 329, sass/_chapter2.sass */
+/* line 346, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .video.dante_chinni .intro {
   font-size: 18px; }
-/* line 332, sass/_chapter2.sass */
+/* line 349, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .video.dante_chinni h2 {
   font-size: 63px; }
-/* line 335, sass/_chapter2.sass */
+/* line 352, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .video.dante_chinni .caption {
   font-size: 18px; }
 
